Prevent overflow on x axis

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,4 +2,5 @@
   background-color: black;
   min-height: 100vh;
   color: white;
+  overflow-x: hidden;
 }
